# GoBattleSim-Engine

./: .gitignore  CMakeLists.txt  README.md  build-gbs-wasm.py  get_version.cmake
config/: config.h  config.h.in
doc/: PvE Battle Logic Flow.docx  PvE Dodge Strategy.docx  PvE_Battle_Logic_Flow.md  PvE_Combo_Strategy.md  PvE_Dodge_Strategy.md  PvP Strategy.docx  PvP_Strategy.md  Simple PvP Battle Logic Flow.docx  Simple_PvP_Battle_Logic_Flow.md
examples/: GBS_GAME_MASTER.json  gym.json  input1.json  input2.json  input3.json  input4.json  input5.json  input6.json  raid_duo.json  raid_solo.json  raid_solo_mixed_strategies.json
include/: Application.h  Battle.h  BattleMatrix.h  GameMaster.h  GoBattleSim.h  GoBattleSim_extern.h  Move.h  Party.h  Player.h  Pokemon.h  PokemonState.h  PvPPokemon.h  PvPStrategy.h  SimplePvPBattle.h  Strategy.h  Timeline.h  TimelineEvent.h
setting/: GBS.json
src/: Application.cpp  Battle.cpp  BattleMatrix.cpp  GameMaster.cpp  GoBattleSim.cpp  GoBattleSim_Extern.cpp  GoBattleSim_extern.cpp  Move.cpp  Party.cpp  Player.cpp  Pokemon.cpp  PokemonState.cpp  PvPPokemon.cpp  PvPStrategy.cpp  SimplePvPBattle.cpp  Strategy.cpp  Timeline.cpp  json_converter.hpp  main.cpp  name_mapping.hpp
test/unit_test/: test_BattleMatrix.cpp  test_GameMaster.cpp  test_PvP_Battle.cpp  test_PvP_Battle_CMP.cpp  test_Raid_Battle.cpp  test_Timeline.cpp  test_json_converter.cpp
